packages/myhdl/myhdl-0.8.tar.gz/myhdl-0.8/myhdl/test/bugs/Test.vhd
-- File: Test.vhd
-- Generated by MyHDL 0.8.1
-- Date: Sun Sep 15 22:40:54 2013


library IEEE;
use IEEE.std_logic_1164.all;
use IEEE.numeric_std.all;
use std.textio.all;

use work.pck_myhdl_081.all;

entity Test is
    port (
        sigin: in unsigned(3 downto 0);
        sigout: out unsigned(3 downto 0)
    );
end entity Test;


architecture MyHDL of Test is






begin




TEST_OUTPUT: process (sigin) is
    variable tmp: unsigned(1 downto 0);
begin
    sigout <= unsigned'(sigin(0) & sigin(2));
    tmp := unsigned'(sigin(0) & sigin(2));
    sigout <= resize(tmp, 4);
end process TEST_OUTPUT;

end architecture MyHDL;
